--- a/home.html
+++ b/home.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Web Page</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CLAFI | UCLA</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#">Home Page</a></li>
+            <li><a href="#">About CLAFI</a></li>
+            <li><a href="#">Events</a></li>
+            <li><a href="#">CLAFI Review</a></li>
+            <li><a href="#">CLAFI Media</a></li>
+            <li><a href="#">Support CLAFI</a></li>
+        </ul>
+    </nav>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Welcome to the Center for Liberal Arts</h1>
     </header>
-    <section>
-        <p>This is a paragraph of text in the body of the webpage. Here you can add more details about your website, what it is about, and what you hope to achieve with it.</p>
-    </section>
+    <img src="path_to_image.jpg" alt="Decorative image">
     <footer>
-        <a href="https://www.example.com">Visit our page</a>
+        <!-- Footer content here -->
     </footer>
 </body>
 </html>
